Add RecyclerView usage and DiffUtil impl

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+<!--    color for disabled shopItem-->
+    <color name="color_item_disabled">#4033b5e5</color>
 </resources>
