--- a/app/src/main/res/layout/item_shop_disabled.xml
+++ b/app/src/main/res/layout/item_shop_disabled.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:alpha="0.3"
-    app:cardBackgroundColor="@android:color/holo_blue_light"
+    app:cardBackgroundColor="@color/color_item_disabled"
     app:cardCornerRadius="4dp"
     app:cardElevation="1dp"
     app:cardUseCompatPadding="true">
